VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc14Up.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [24MB/455.1MB][  5%][==>                                               ][8MB/s]  [40MB/455.1MB][  8%][====>                                             ][10MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][12.8MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][14.67MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][14.86MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][16MB/s]  [152MB/455.1MB][ 33%][================>                                 ][16.89MB/s]  [176MB/455.1MB][ 38%][===================>                              ][17.6MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][19.64MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][20MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][21.54MB/s]  [312MB/455.1MB][ 68%][==================================>               ][22.29MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][22.93MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][23.5MB/s]  [408MB/455.1MB][ 89%][============================================>     ][24MB/s]  [448MB/455.1MB][ 98%][=================================================>][24.89MB/s]  [455.1MB/455.1MB][100%][==================================================][25.28MB/s]  [455.1MB/455.1MB][100%][==================================================][25.28MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_30213/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_30213/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
